# portfolio

./: README.md
dtw_clusterization/: .gitignore  Cargo.toml  README.md
dtw_clusterization/example/: Cargo.toml  README.md
dtw_clusterization/example/src/: algorythm.rs  bq.rs  csv.rs  loading.rs  main.rs  stats.rs
dtw_clusterization/kmeans/: Cargo.toml  README.md
dtw_clusterization/kmeans-tw/: Cargo.toml  README.md
dtw_clusterization/kmeans-tw/src/: algorythm.rs  clusterization.rs  context.rs  lib.rs  metrics.rs
dtw_clusterization/kmeans-tw/src/data_type/: dataset.rs  mod.rs  timewrap.rs  traits.rs  types.rs
dtw_clusterization/kmeans/src/: barycenters.rs  euclidean_centers.rs  init_plusplus.rs  lib.rs  time_series.rs  tools.rs  types.rs
mmr/: .gitignore  Cargo.toml  README.md
mmr/generator/: Cargo.toml
mmr/generator/src/: lib.rs
mmr/leaderboard-v1-8/: Cargo.toml  README.md
mmr/leaderboard-v1-8/src/: main.rs
mmr/leaderboard-v2-8/: Cargo.toml  README.md
mmr/leaderboard-v2-8/src/: main.rs
mmr/mission_winrate/: Cargo.toml
mmr/mission_winrate/src/: main.rs  mission_group.rs
mmr/mmr-libs/: Cargo.toml  README.md
mmr/mmr-libs/src/: datasets.rs  leaderboard_row.rs  leaderboard_v1.rs  leaderboard_v2.rs  lib.rs  math.rs  memory.rs  reader.rs  spread.rs  statistic.rs  types.rs  userstat.rs  writer.rs
nimby_timetable/: .gitignore  Cargo.toml  README.md  config.ron  lines.ron
nimby_timetable/src/: config.rs  line.rs  main.rs  math.rs  run.rs  shifts.rs  train.rs  types.rs  way_getting.rs
proc_testing/: Cargo.toml  README.md
proc_testing/pid_memory/: Cargo.toml
proc_testing/pid_memory/src/: main.rs
proc_testing/src/: lib.rs
text_reader/: .gitignore  Cargo.toml  README.md
text_reader/control_log/: Cargo.toml  README.md
text_reader/control_log/src/: lib.rs
text_reader/database_lib/: Cargo.toml  README.md
text_reader/database_lib/src/: db_config.rs  fs.rs  lib.rs
text_reader/database_lib/src/config/: algorythms.rs  impliment.rs  mod.rs  traits.rs
text_reader/hp_overlay/: Cargo.toml  README.md
text_reader/hp_overlay/src/: main.rs
text_reader/hp_statistic/: Cargo.toml  README.md
text_reader/hp_statistic/src/: lib.rs  statistic.rs
text_reader/images/: Cargo.toml  README.md
text_reader/images/src/: lib.rs
text_reader/images/src/algorythms/: mod.rs
text_reader/images/src/png/: algorythms.rs  base.rs  mod.rs
text_reader/tensor/: Cargo.toml
text_reader/tensor/src/: lib.rs  traits.rs
text_reader/tensor/src/conv/: fs.rs  impliment.rs  mod.rs  neural.rs
text_reader/tensor/src/malgebra/: matrix.rs  mod.rs  traits.rs
text_reader/tesseract/: Cargo.toml  README.md
text_reader/tesseract/src/: image.rs  main.rs  name_process.rs  tesseract.rs
text_reader/tesseract_lib/: Cargo.toml  README.md
text_reader/tesseract_lib/src/: commands.rs  fs.rs  lib.rs
text_reader/tools/: db_add_device.js  db_fix_exp.js  package-lock.json
text_reader/ts_learning/: Cargo.toml  README.md
text_reader/ts_learning/src/: fs.rs  main.rs
text_reader/ts_prepear/: Cargo.toml  README.md
text_reader/ts_prepear/src/: main.rs
