[workspace]
members = [
    "mmr-libs",
    "leaderboard-v1-8", 
    "leaderboard-v2-8",
]

[package]
name = "mmr_project"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.version = "1.49.0"
tokio.features = [ "rt", "rt-multi-thread", "macros", "fs", "io-util", "sync"]
flume = "0.12.0"
clap = { version = "4.5.60", features = ["derive"] }
