[workspace]
members = [
    "pid_memory"
]

[package]
name = "bq_tests"
version = "0.1.0"
edition = "2024"

[dependencies]
gcp-bigquery-client = "0.26.0"
tokio.version = "1.46.1"
tokio.features = [ "rt", "rt-multi-thread", "macros", "fs", "io-util", "sync"]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }