[package]
name = "example"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.58", features = ["derive"] }
serde_json="1.0.149"
tokio.version = "1.49.0"
tokio.features = [ "rt", "rt-multi-thread", "macros", "fs", "io-util", "sync"]
gcp-bigquery-client = "0.28.0"
chrono = "0.4.43"
kmeans_tw = { path = "../kmeans-tw" }
kmeans = { path = "../kmeans" }
 