[package]
name = "pid_memory"
version = "0.1.0"
edition = "2024"

[dependencies]
sysinfo = { version = "0.36.0", features = ["multithread"] }
chrono = "0.4.41"
tokio.version = "1.46.1"
tokio.features = [ "rt", "rt-multi-thread", "macros", "fs", "io-util", "sync"]
clap = { version = "4.5.41", features = ["derive"] }
