[package]
name = "database_lib"
version = "0.1.0"
edition = "2024"

[dependencies]
csv = "1.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json="1.0.149"
tokio.version = "1.49.0"
tokio.features = [ "rt", "rt-multi-thread", "macros", "fs", "io-util", "sync"]
rayon = "1.11.0"
strsim = "0.11.1"
tesseract_lib = { path = "../tesseract_lib" }
