[package]
name = "tensor"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.1"
rand_distr = "0.5.1"
rayon = "1.10.0"
tokio.version = "1.46.1"
tokio.features = [ "rt", "rt-multi-thread", "macros", "fs", "io-util", "sync"]
serde = { version = "1.0.219", features = ["derive"] }
serde_json="1.0.140"
rustfft="6.4.0"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }